tmux reattach (clipboard fix) + go fmt after save

--- a/tmux.conf
+++ b/tmux.conf
@@ -101,3 +101,5 @@ set -g status-right "#S:#I.#P"
 set -g status-left "" # deprecated: %d %b %R"
 set -g status-justify left
 set-option -g status-position top
+
+# if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
