--- a/tmux.conf
+++ b/tmux.conf
@@ -102,4 +102,8 @@ set -g status-left "" # deprecated: %d %b %R"
 set -g status-justify left
 set-option -g status-position top
 
-# if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+# Mac reattach fix
+if-shell 'test "$(uname)" = "Darwin"' 'set-option -g default-command "reattach-to-user-namespace -l zsh"'
+
+# Own commands
+bind-key S command-prompt -p 'Save buffer to:' -I '/tmp/tmux.log' 'capture-pane -S -10000; save-buffer %1; delete-buffer'
