--- a/.gitmodules
+++ b/.gitmodules
@@ -33,7 +33,7 @@
 	url = https://github.com/hynek/vim-python-pep8-indent.git
 [submodule "vim/bundle/colorschemes"]
 	path = vim/bundle/colorschemes
-	url = git@github.com:flazz/vim-colorschemes.git
+	url = https://github.com:flazz/vim-colorschemes.git
 [submodule "vim/bundle/Yggdroot"]
 	path = vim/bundle/Yggdroot
 	url = https://github.com/Yggdroot/indentLine.git
@@ -87,7 +87,7 @@
 	url = https://github.com/bling/vim-airline.git
 [submodule "vim/bundle/vim-colortoggle"]
 	path = vim/bundle/vim-colortoggle
-	url = git@github.com:agonzalezro/vim-colortoggle.git
+	url = https://github.com:saghul/vim-colortoggle.git
 [submodule "vim/bundle/vim-compiler-go"]
 	path = vim/bundle/vim-compiler-go
 	url = https://github.com/rjohnsondev/vim-compiler-go.git
