--- a/.gitmodules
+++ b/.gitmodules
@@ -1,99 +1,3 @@
-[submodule "nerdtree"]
-    path = vim/bundle/nerdtree
-	url = https://github.com/scrooloose/nerdtree.git
-[submodule "pyflakes-vim"]
-    path = vim/bundle/pyflakes-vim
-	url = https://github.com/kevinw/pyflakes-vim.git
-[submodule "pytest"]
-    path = vim/bundle/pytest.vim
-	url = https://github.com/alfredodeza/pytest.vim
-[submodule "rope-vim"]
-    path = vim/bundle/rope-vim
-	url = https://github.com/klen/rope-vim.git
-[submodule "supertab"]
-    path = vim/bundle/supertab
-	url = https://github.com/ervandew/supertab
-[submodule "tlib_vim"]
-    path = vim/bundle/tlib_vim
-	url = https://github.com/tomtom/tlib_vim.git
-[submodule "vim-addon-mw-utils"]
-    path = vim/bundle/vim-addon-mw-utils
-	url = https://github.com/MarcWeber/vim-addon-mw-utils.git
-[submodule "vim-flake8"]
-    path = vim/bundle/vim-flake8
-	url = https://github.com/nvie/vim-flake8.git
-[submodule "vim-snipmate"]
-    path = vim/bundle/vim-snipmate
-	url = https://github.com/garbas/vim-snipmate
-[submodule "vim/bundle/ctrlp.vim"]
-	path = vim/bundle/ctrlp.vim
-	url = https://github.com/kien/ctrlp.vim.git
-[submodule "vim/bundle/vim-python-pep8-indent"]
-	path = vim/bundle/vim-python-pep8-indent
-	url = https://github.com/hynek/vim-python-pep8-indent.git
-[submodule "vim/bundle/colorschemes"]
-	path = vim/bundle/colorschemes
-	url = https://github.com/flazz/vim-colorschemes.git
-[submodule "vim/bundle/Yggdroot"]
-	path = vim/bundle/Yggdroot
-	url = https://github.com/Yggdroot/indentLine.git
-[submodule "vim/bundle/scala-vim-support"]
-	path = vim/bundle/scala-vim-support
-	url = https://github.com/rosstimson/scala-vim-support.git
-[submodule "vim/bundle/python-mode"]
-	path = vim/bundle/python-mode
-	url = https://github.com/klen/python-mode.git
-[submodule "vim/bundle/ack.vim"]
-	path = vim/bundle/ack.vim
-	url = https://github.com/mileszs/ack.vim
-[submodule "vim/bundle/MatchTag"]
-	path = vim/bundle/MatchTag
-	url = https://github.com/gregsexton/MatchTag.git
-[submodule "vim/bundle/vim-fugitive"]
-	path = vim/bundle/vim-fugitive
-	url = https://github.com/tpope/vim-fugitive.git
-[submodule "vim/bundle/vim-thrift"]
-	path = vim/bundle/vim-thrift
-	url = https://github.com/jigish/vim-thrift.git
-[submodule "vim/bundle/vim-unimpaired"]
-	path = vim/bundle/vim-unimpaired
-	url = https://github.com/tpope/vim-unimpaired.git
-[submodule "vim/bundle/powerline"]
-	path = vim/bundle/powerline
-	url = https://github.com/Lokaltog/powerline.git
-[submodule "vim/bundle/vim-scala"]
-	path = vim/bundle/vim-scala
-	url = https://github.com/derekwyatt/vim-scala.git
-[submodule "vim/bundle/vim-easymotion"]
-	path = vim/bundle/vim-easymotion
-	url = https://github.com/Lokaltog/vim-easymotion.git
-[submodule "vim/bundle/HTML-AutoCloseTag"]
-	path = vim/bundle/HTML-AutoCloseTag
-	url = https://github.com/vim-scripts/HTML-AutoCloseTag.git
-[submodule "vim/bundle/jedi-vim"]
-	path = vim/bundle/jedi-vim
-	url = https://github.com/davidhalter/jedi-vim.git
-[submodule "vim/bundle/vim-gitgutter"]
-	path = vim/bundle/vim-gitgutter
-	url = https://github.com/airblade/vim-gitgutter.git
-[submodule "vim/bundle/vim-snippets"]
-	path = vim/bundle/vim-snippets
-	url = https://github.com/honza/vim-snippets.git
-[submodule "vim/bundle/vim-coffee-script"]
-	path = vim/bundle/vim-coffee-script
-	url = https://github.com/kchmck/vim-coffee-script.git
-[submodule "vim/bundle/vim-airline"]
-	path = vim/bundle/vim-airline
-	url = https://github.com/bling/vim-airline.git
-[submodule "vim/bundle/vim-colortoggle"]
-	path = vim/bundle/vim-colortoggle
-	url = https://github.com/saghul/vim-colortoggle.git
-[submodule "vim/bundle/vim-compiler-go"]
-	path = vim/bundle/vim-compiler-go
-	url = https://github.com/rjohnsondev/vim-compiler-go.git
-[submodule "vim/bundle/vim-colorscheme-switcher"]
-	path = vim/bundle/vim-colorscheme-switcher
-	url = https://github.com/xolox/vim-colorscheme-switcher.git
-[submodule "vim/bundle/vim-misc"]
-	path = vim/bundle/vim-misc
-	url = https://github.com/xolox/vim-misc.git
+[submodule "vim/bundle/Vundle.vim"]
+	path = vim/bundle/Vundle.vim
+	url = https://github.com/gmarik/Vundle.vim.git
