--- a/i3/config
+++ b/i3/config
@@ -160,6 +160,6 @@ bar {
 exec --no-startup-id gnome-settings-daemon
 exec --no-startup-id nm-applet
 
-bindsym XF86AudioRaiseVolume exec amixer -q set Master 2dB+ unmute
-bindsym XF86AudioLowerVolume exec amixer -q set Master 2dB- unmute
-bindsym XF86AudioMute exec amixer -q set Master toggle
+bindsym XF86AudioRaiseVolume exec amixer -c 1 -q set Master 2dB+ unmute
+bindsym XF86AudioLowerVolume exec amixer -c 1 -q set Master 2dB- unmute
+bindsym XF86AudioMute exec bash ~/.dot/i3/toggle
