i3 conf + new vim plugin + NO_HUP

--- a/i3/config
+++ b/i3/config
@@ -163,3 +163,4 @@ exec --no-startup-id nm-applet
 bindsym XF86AudioRaiseVolume exec amixer -c 1 -q set Master 2dB+ unmute
 bindsym XF86AudioLowerVolume exec amixer -c 1 -q set Master 2dB- unmute
 bindsym XF86AudioMute exec bash ~/.dot/i3/toggle
+bindsym Mod4+Mod1+l exec i3lock
