Default path new for tmux + 4 tabs on md/rst

--- a/tmux.conf
+++ b/tmux.conf
@@ -20,8 +20,8 @@ bind r source-file ~/.tmux.conf \; display "Configuration reloaded!"
 bind C-a send-prefix
 
 # Splitting
-bind | split-window -h
-bind - split-window -v
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
 # vim movements
 bind h select-pane -L
