GOROOT, tmux new binding + Dockerfile.vim
- Fix the GOROOT path to fix a problem with vim-compiler-go
- Add a new key binding for tmux that allows enable/disable the mouse
  (useful for copy/paste without press Alt)
- Add the docker file syntax and disable the spell on Dockerfile's

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,19 @@ set -g mouse-resize-pane on
 set -g mouse-select-window on
 set -g mode-mouse on
 
+# Allow to active and deactive this mode with "m" & "M"
+bind m \
+  set -g mouse-select-pane on\;\
+  set -g mouse-resize-pane on\;\
+  set -g mouse-select-window on\;\
+  set -g mode-mouse on
+
+bind M \
+  set -g mouse-select-pane off\;\
+  set -g mouse-resize-pane off\;\
+  set -g mouse-select-window off\;\
+  set -g mode-mouse off
+
 # Activity in other windows
 setw -g monitor-activity on
 set -g visual-activity on
