tmux plugins, no wos in ansible, don't autocompile Go with vim

--- a/tmux.conf
+++ b/tmux.conf
@@ -124,3 +124,19 @@ if-shell 'test "$(uname)" = "Darwin"' '\
   set-option -g default-command "reattach-to-user-namespace -l zsh";\
   setw -g automatic-rename on\
 '
+
+# tpm stuff
+# # List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins ' \
+  tmux-plugins/tmux-copycat \
+  tmux-plugins/tmux-open \
+  tmux-plugins/tmux-sensible \
+  tmux-plugins/tmux-sessionist \
+  tmux-plugins/tmux-yank \
+  tmux-plugins/tpm \
+  tmux-plugins/vim-tmux \
+  tmux-plugins/vim-tmux-focus-events \
+'
+
+run-shell '~/.tmux/plugins/tpm/tpm'
