--- a/tmux.conf
+++ b/tmux.conf
@@ -116,7 +116,7 @@ set -g status-justify left
 set-option -g status-position top
 
 # Own commands
-bind-key S command-prompt -p 'Save buffer to:' -I '/tmp/tmux.log' 'capture-pane -S -10000; save-buffer %1; delete-buffer'
+bind-key b command-prompt -p 'Save buffer to:' -I '/tmp/tmux.log' 'capture-pane -S -10000; save-buffer %1; delete-buffer'
 
 # Mac reattach fix
 if-shell 'test "$(uname)" = "Darwin"' '\
