Fix scroll issue in new tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -40,23 +40,18 @@ bind -r K resize-pane -U 5  # TODO: this breaks with vim :(
 bind -r L resize-pane -R 5
 
 # People doesn't like this, I do
-set -g mouse-select-pane on
-set -g mouse-resize-pane on
-set -g mouse-select-window on
-set -g mode-mouse on
+## set -g mouse-select-pane on
+## set -g mouse-resize-pane on
+## set -g mouse-select-window on
+## set -g mode-mouse on
+set -g mouse on
 
 # Allow to active and deactive this mode with "m" & "M"
-bind m \
-  set -g mouse-select-pane on\;\
-  set -g mouse-resize-pane on\;\
-  set -g mouse-select-window on\;\
-  set -g mode-mouse on
+bind m set -g mouse on
+bind M set -g mouse off
 
-bind M \
-  set -g mouse-select-pane off\;\
-  set -g mouse-resize-pane off\;\
-  set -g mouse-select-window off\;\
-  set -g mode-mouse off
+# Better scrolling with keys
+bind-key -T root PPage if-shell -F "#{alternate_on}" "send-keys PPage" "copy-mode -e; send-keys PPage"
 
 # Activity in other windows
 setw -g monitor-activity on
@@ -137,6 +132,7 @@ set -g @tpm_plugins ' \
   tmux-plugins/tpm \
   tmux-plugins/vim-tmux \
   tmux-plugins/vim-tmux-focus-events \
+  nhdaly/tmux-scroll-copy-mode \
 '
 
 run-shell '~/.tmux/plugins/tpm/tpm'
