--- a/tmux.conf
+++ b/tmux.conf
@@ -113,6 +113,8 @@ set-option -g status-position top
 # Own commands
 bind-key b command-prompt -p 'Save buffer to:' -I '/tmp/tmux.log' 'capture-pane -S -10000; save-buffer %1; delete-buffer'
 
+bind-key c new-window -c "#{pane_current_path}"
+
 # Mac reattach fix
 if-shell 'test "$(uname)" = "Darwin"' '\
   setw -g automatic-rename off;\
