--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -6,7 +6,9 @@ general {
 
 order += "volume master"
 order += "wireless wlan0"
+order += "wireless wlp1s0"
 order += "ethernet eth0"
+order += "ethernet eno1"
 order += "battery 0"
 order += "tztime local"
 
@@ -23,7 +25,17 @@ wireless wlan0 {
         format_down = ""
 }
 
+wireless wlp1s0 {
+        format_up = "%essid: %bitrate, %quality @%ip"
+        format_down = ""
+}
+
 ethernet eth0 {
+        format_up = "%speed @%ip"
+        format_down = ""
+}
+
+ethernet eno1 {
         format_up = "%speed @%ip"
         format_down = ""
 }
